<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".DriverRegLoginActivity">


    <EditText
        android:id="@+id/driverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusDriver"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textNoSuggestions"
        />

    <EditText
        android:id="@+id/driverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/driverEmail"
        android:hint="@string/pass"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInDriver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/driverPassword"
        android:background="@color/gray1"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signIn" />

    <Button
        android:id="@+id/signUpDriver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/signInDriver"
        android:background="@color/gray1"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/statusDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/driverStatus" />

    <TextView
        android:id="@+id/accountCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInDriver"
        android:layout_marginTop="5dp"
        android:text="@string/createQuestion" />
</RelativeLayout>